--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="style.css"></script>
+    <script src="script.js"></script>
     <title>Title</title>
 </head>
 <body>
 
-<div id="cat"></div>
+<div id="cat" class="stand"></div>
 
 </body>
 </html>
