sprite moves, added different sprites

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Title</title>
 </head>
 <body>
-
-<div id="cat" class="stand"></div>
+<div id="gameArea">
+    <div id="cat" class="stand"></div>
+</div>
 
 </body>
 </html>
