game is now oop

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="gameArea">
-    <div id="cat" class="stand"></div>
+    <!--<div id="hero" class="stand"></div>-->
 </div>
 
 </body>
