--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="script.js"></script>
+    <script src="gameController.js"></script>
+    <script src="heroController.js"></script>
     <title>Title</title>
 </head>
 <body>
-<div id="gameArea">
-    <!--<div id="hero" class="stand"></div>-->
-</div>
-
+<div id="gameArea"></div>
 </body>
 </html>
