--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="script.js"></script>
     <script src="gameController.js"></script>
     <script src="heroController.js"></script>
+    <script src="tileMap.js"></script>
     <title>Title</title>
 </head>
 <body>
