--- a/client/index.html
+++ b/client/index.html
@@ -1,18 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="../script.js"></script>
-    <script src="../gameController.js"></script>
-    <script src="../tileMap.js"></script>
+Mushie Mushie
 
-    <script src="../heroController.js"></script>
-    <title>Title</title>
-</head>
-<body>
-<div id="gameArea"></div>
-</body>
-</html>
+<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+<script>var socket = io()</script>
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+    <!--<meta charset="UTF-8">-->
+    <!--<link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">-->
+    <!--<link rel="stylesheet" href="style.css">-->
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
+    <!--<script src="js/script.js"></script>-->
+    <!--<script src="js/gameController.js"></script>-->
+    <!--<script src="js/tileMap.js"></script>-->
+
+    <!--<script src="js/heroController.js"></script>-->
+    <!--<title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<div id="gameArea"></div>-->
+<!--</body>-->
+<!--</html>-->
