appending rocks in the wrong place

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
 <script src="gameController.js"></script>
 <script src="tileMap.js"></script>
 <script src="heroController.js"></script>
+<script src="weapons.js"></script>
 </body>
 </html>
