--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,31 @@
-Mushie Mushie
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Hero</title>
+</head>
+<body>
+<div id="gameArea"></div>
+
+<script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-messaging.js"></script>
 
 <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+
+<script src="js/script.js"></script>
+<script src="js/gameController.js"></script>
+<script src="js/tileMap.js"></script>
+<script src="js/heroController.js"></script>
+<script src="js/weapons.js"></script>
+
+
 <script>
     var socket = io();
 
@@ -14,31 +39,5 @@ Mushie Mushie
 </script>
 
 
-
-
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-    <!--<meta charset="UTF-8">-->
-    <!--<link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">-->
-    <!--<link rel="stylesheet" href="style.css">-->
-    <!--<title>Hero</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--<div id="gameArea"></div>-->
-
-<!--<script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>-->
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
-
-<!--<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-app.js"></script>-->
-<!--<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-auth.js"></script>-->
-<!--<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-database.js"></script>-->
-<!--<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-messaging.js"></script>-->
-
-<!--<script src="js/script.js"></script>-->
-<!--<script src="js/gameController.js"></script>-->
-<!--<script src="js/tileMap.js"></script>-->
-<!--<script src="js/heroController.js"></script>-->
-<!--<script src="js/weapons.js"></script>-->
-<!--</body>-->
-<!--</html>-->
+</body>
+</html>
